--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>MainWindow</class>
- <widget class="QMainWindow" name="MyD14ry">
+ <widget class="QMainWindow" name="MainWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -18,9 +18,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>20</y>
-      <width>391</width>
-      <height>521</height>
+      <y>40</y>
+      <width>291</width>
+      <height>481</height>
      </rect>
     </property>
     <property name="currentIndex">
@@ -35,9 +35,12 @@
        <rect>
         <x>10</x>
         <y>10</y>
-        <width>371</width>
-        <height>471</height>
+        <width>271</width>
+        <height>431</height>
        </rect>
+      </property>
+      <property name="alternatingRowColors">
+       <bool>true</bool>
       </property>
      </widget>
     </widget>
@@ -50,8 +53,8 @@
        <rect>
         <x>10</x>
         <y>10</y>
-        <width>371</width>
-        <height>471</height>
+        <width>271</width>
+        <height>431</height>
        </rect>
       </property>
      </widget>
@@ -65,8 +68,8 @@
        <rect>
         <x>10</x>
         <y>10</y>
-        <width>371</width>
-        <height>471</height>
+        <width>271</width>
+        <height>431</height>
        </rect>
       </property>
      </widget>
@@ -75,10 +78,10 @@
    <widget class="QCalendarWidget" name="calendarWidget">
     <property name="geometry">
      <rect>
-      <x>420</x>
+      <x>320</x>
       <y>80</y>
-      <width>361</width>
-      <height>421</height>
+      <width>471</width>
+      <height>431</height>
      </rect>
     </property>
    </widget>
