--- a/activityview.ui
+++ b/activityview.ui
@@ -46,14 +46,21 @@
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
-         <widget class="QLabel" name="label">
+         <widget class="QLabel" name="categoryLabel">
           <property name="text">
            <string>Categoria</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QComboBox" name="comboBox"/>
+         <widget class="QComboBox" name="categoryComboBox"/>
+        </item>
+        <item>
+         <widget class="QPushButton" name="addCategoryButton">
+          <property name="text">
+           <string>+</string>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
