--- a/addactivityview.ui
+++ b/addactivityview.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>353</width>
-    <height>515</height>
+    <height>514</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -66,6 +66,13 @@
       </item>
       <item>
        <widget class="QComboBox" name="categoryComboBox"/>
+      </item>
+      <item>
+       <widget class="QPushButton" name="addCategoryButton">
+        <property name="text">
+         <string>+</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
