Override funzione di chiusura finestra di activityview.cpp adesso il detach() viene richiamato in qualunque modo la finestra venga chiusa.

--- a/activityview.ui
+++ b/activityview.ui
@@ -67,7 +67,7 @@
       <item>
        <widget class="QCheckBox" name="CompletedCheckBox">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="text">
          <string>Completata</string>
