Aggiunta funzionalità di rimozione di una sotto attività

--- a/file_ui/activityview.ui
+++ b/file_ui/activityview.ui
@@ -108,6 +108,13 @@
      </widget>
     </item>
     <item>
+     <widget class="QPushButton" name="DeleteSubActivity">
+      <property name="text">
+       <string>Elimina sotto attività</string>
+      </property>
+     </widget>
+    </item>
+    <item>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
        <widget class="QLabel" name="NoteLabel">
