--- a/file_ui/addshoppingproductdialog.ui
+++ b/file_ui/addshoppingproductdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>391</width>
-    <height>121</height>
+    <height>155</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,7 +19,7 @@
      <x>10</x>
      <y>10</y>
      <width>371</width>
-     <height>91</height>
+     <height>131</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -34,6 +34,27 @@
       </item>
       <item>
        <widget class="QLineEdit" name="NameEdit"/>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <widget class="QLabel" name="CategoryLabel">
+        <property name="text">
+         <string>Categoria:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QComboBox" name="CategorycomboBox"/>
+      </item>
+      <item>
+       <widget class="QPushButton" name="AddCategoryButton">
+        <property name="text">
+         <string>+</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
