--- a/file_ui/mainwindow.ui
+++ b/file_ui/mainwindow.ui
@@ -20,11 +20,11 @@
       <x>10</x>
       <y>40</y>
       <width>291</width>
-      <height>421</height>
+      <height>461</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="ActivityTab">
      <attribute name="title">
@@ -39,7 +39,7 @@
         <x>10</x>
         <y>10</y>
         <width>271</width>
-        <height>381</height>
+        <height>371</height>
        </rect>
       </property>
       <property name="editTriggers">
@@ -50,6 +50,19 @@
       </property>
       <property name="alternatingRowColors">
        <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButtonDeleteCategory">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>390</y>
+        <width>271</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Elimina Categoria</string>
       </property>
      </widget>
     </widget>
@@ -63,7 +76,7 @@
         <x>10</x>
         <y>10</y>
         <width>271</width>
-        <height>431</height>
+        <height>411</height>
        </rect>
       </property>
      </widget>
@@ -78,7 +91,7 @@
         <x>10</x>
         <y>10</y>
         <width>271</width>
-        <height>431</height>
+        <height>411</height>
        </rect>
       </property>
      </widget>
@@ -107,19 +120,6 @@
      <string>Cerca</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButtonDeleteCategory">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>460</y>
-      <width>301</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Elimina Categoria</string>
-    </property>
-   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -137,6 +137,7 @@
     <addaction name="actionActivity"/>
     <addaction name="actionEvent"/>
     <addaction name="actionLista_della_spesa"/>
+    <addaction name="actionCategoria"/>
    </widget>
    <addaction name="menuAdd"/>
   </widget>
@@ -154,6 +155,11 @@
   <action name="actionLista_della_spesa">
    <property name="text">
     <string>Lista della spesa</string>
+   </property>
+  </action>
+  <action name="actionCategoria">
+   <property name="text">
+    <string>Categoria</string>
    </property>
   </action>
  </widget>
