Modifica della finestra di alertWindow adeso non è più possibile cancellare il testo di alert

--- a/file_ui/alertwindow.ui
+++ b/file_ui/alertwindow.ui
@@ -7,13 +7,16 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>139</height>
+    <height>141</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
   <widget class="QPlainTextEdit" name="plainTextEdit">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="geometry">
     <rect>
      <x>20</x>
@@ -21,6 +24,9 @@
      <width>361</width>
      <height>81</height>
     </rect>
+   </property>
+   <property name="readOnly">
+    <bool>true</bool>
    </property>
    <property name="plainText">
     <string>Stai eliminando una categoria contenente delle attività.
