Aggiunta funzionalità di aggiunta categoria di un prodotto [TODO: aggiungere classe template per la finestra di aggiunta di una categoria]

--- a/file_ui/addshoppingproductdialog.ui
+++ b/file_ui/addshoppingproductdialog.ui
@@ -40,7 +40,7 @@
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
-       <widget class="QLabel" name="CategoryLabel">
+       <widget class="QCheckBox" name="CategoryCheckBox">
         <property name="text">
          <string>Categoria:</string>
         </property>
